Some formatting changes, added the box and band svgs to the about.html file. Still need to proof read

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,42 +2,46 @@
 
 {% block content %}
 
+<link rel="stylesheet" type="text/css" href="../static/css/about.css" charset="utf-8" />
+
 	<div class="container">
 		<p>The SkirMesh System is poised to revolutionize the game of Airsoft. By leveraging wireless mesh
                    networking and RFID player identification technologies the airsoft field becomes a dynamic and interactive
                    part of the gameplay experience.
 		</p>
-		<p> Three main components comprise the SkirMesh System: </p>
+		<!-- <p> Three main components comprise the SkirMesh System: </p>
 		<ul>
 			<li> The Node </li>			
 			<li> The Controller </li>
 			<li> The Web </li>
 		</ul>
-		<p> These three components are described below </p>
+		<p> These three components are described below </p> -->
 		
 		
-		<h2> The Node </h2>
-		<p> The individual node is the foundation of the system and allows the player to interact with the
+		<h3> The Node </h3>
+		<img class="node_img" src="../static/img/node.jpg" alt="NODE" > 
+		<p> 
+			The individual node is the foundation of the system and allows the player to interact with the
                     SkirMesh System. Several can populate the field and each will take on different functions 
-                    based on the type of game.
+                    based on the game type.
 		</p>
 
 		<p> A player interacts with The Node through the use of an issued RFID tag. Each RFID tag possesses
                     a Unique Identifier (UID) to allow the SkirMesh System to identify who interacted with The Node,
                     what action to take based on that interaction, and finally to award points to that Player based
                     on the scenario.
-                </p>
+    </p>
 		
-		<h3> Node - Physical Description </h3>
+		<!-- <h3> Node - Physical Description </h3>
 		<p> At its core The Node consists of 4 sub-systems </p>
 		<ul>
 			<li> RFID Reader - sub-system </li>
 			<li> Player Feedback - sub-system </li>
 			<li> Communications  - sub-system</li>
 			<li> Power </li>
-		</ul>
+		</ul> -->
 		
-		<h4> RFID Reader - Sub-System </h4>
+		<!-- <h4> RFID Reader - Sub-System </h4>
 		<p> The RFID reader is what allows the SkirMesh System to interact with and identify players. The Node
                     will provide an audible beep to indicate that the RFID tag has been read. Because the individual node "knows" 
                     very little about the overall game the RFID reader pulls the UID value from the player's RFID tag and 
@@ -68,18 +72,237 @@
 		<p> All electronics require power and with airsoft fields being our target audience we made the decision to have each node powered
                     by any standard AEG battery pack. If you can put it in the buttstock of your AEG and it has a mini-Tamiya connector it can power
                     a Node.
-		</p>
+		</p> -->
 
-		<h4> Interacting with The Node </h3>
-		<p> A lot has been said interacting with the SkirMesh System so let us take a quick moment to show you
-                    what that looks like.
-		</p>
+		<h3> Interacting with The Node </h3>
+		<!-- <p> A lot has been said interacting with the SkirMesh System so let us take a quick moment to show you
+        what that looks like.
+		</p> -->
 
 		<p> Interaction with the node is simple. As mentioned above each player will be issued an RFID tag.
-                    This tag takes the form of a waterproof silicone wrist band. Each Node has an area marked with 
-                    glow-in-the-dark tape where you will take your wrist band and place it within 1 inch of the marked
-                    area. Thats it! The Node has several means of providing feedback to you to show a successful interaction.
+        This tag takes the form of a waterproof silicone wrist band. Each Node has an area marked with 
+        glow-in-the-dark tape where you will take your wrist band and place it within 1 inch of the marked
+        area. Thats it! The Node has several means of providing feedback to you to show a successful interaction.
 		</p>
+
+		<svg
+   xmlns:dc="http://purl.org/dc/elements/1.1/"
+   xmlns:cc="http://creativecommons.org/ns#"
+   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+   xmlns:svg="http://www.w3.org/2000/svg"
+   xmlns="http://www.w3.org/2000/svg"
+   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+   width="133mm"
+   height="123mm"
+   viewBox="0 0 133 123"
+   version="1.1"
+   id="node"
+	 class="node"
+   inkscape:version="0.92.5 (2060ec1f9f, 2020-04-08)"
+   sodipodi:docname="box.svg">
+  <defs
+     id="defs2" />
+  <sodipodi:namedview
+     id="base"
+     pagecolor="#ffffff"
+     bordercolor="#666666"
+     borderopacity="1.0"
+     inkscape:pageopacity="0.0"
+     inkscape:pageshadow="2"
+     inkscape:zoom="1.0150843"
+     inkscape:cx="9.9397969"
+     inkscape:cy="325.0226"
+     inkscape:document-units="mm"
+     inkscape:current-layer="layer1"
+     inkscape:document-rotation="0"
+     showgrid="false"
+     inkscape:window-width="1920"
+     inkscape:window-height="977"
+     inkscape:window-x="0"
+     inkscape:window-y="23"
+     inkscape:window-maximized="0" />
+  <g
+     inkscape:label="Layer 1"
+     inkscape:groupmode="layer"
+     id="layer1">
+    <rect
+       style="fill:#000000;fill-opacity:1;stroke:#000000;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="rect833"
+       width="131.48903"
+       height="76.137123"
+       x="0.95101351"
+       y="45.951725" />
+    <rect
+       style="fill:#d3ffb9;fill-opacity:1;stroke:#ffffff;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="scanner"
+       width="36.60004"
+       height="26.207436"
+       x="23.374182"
+       y="62.670265" />
+    <ellipse
+       id="LED0"
+			 class="LED"
+       cx="71.157562"
+       cy="86.16658"
+       rx="2.598151"
+       ry="2.7111142" />
+    <ellipse
+       id="LED1"
+			 class="LED"
+       cx="80.222847"
+       cy="86.16658"
+       rx="2.598151"
+       ry="2.7111142"/>       
+    <ellipse
+       id="LED2"
+			 class="LED"
+       cx="89.288147"
+       cy="86.166588"
+       rx="2.598151"
+       ry="2.7111142" />
+    <ellipse
+       id="LED3"
+			 class="LED"
+       cx="98.353432"
+       cy="86.166588"
+       rx="2.598151"
+       ry="2.7111142" />
+    <ellipse
+       id="LED4"
+			 class="LED"
+       cx="107.41872"
+       cy="86.166588"
+       rx="2.598151"
+       ry="2.7111142" />
+    <ellipse
+       style="fill:#ffffff;fill-opacity:1;stroke:#ffffff;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="path837-4"
+       cx="107.41872"
+       cy="78.033241"
+       rx="2.598151"
+       ry="2.7111142" />
+    <ellipse
+       style="fill:#dcdcdc;fill-opacity:1;stroke:#505050;stroke-width:0.2;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="path903"
+       cx="25.972336"
+       cy="47.533211"
+       rx="1.6944462"
+       ry="1.5814831" />
+    <ellipse
+       style="fill:#dcdcdc;fill-opacity:1;stroke:#505050;stroke-width:0.2;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="path903-5"
+       cx="2.645462"
+       cy="83.737885"
+       rx="1.6944462"
+       ry="1.5814831" />
+    <ellipse
+       style="fill:#dcdcdc;fill-opacity:1;stroke:#505050;stroke-width:0.2;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="path903-4"
+       cx="25.972336"
+       cy="120.50736"
+       rx="1.6944462"
+       ry="1.5814831" />
+    <ellipse
+       style="fill:#dcdcdc;fill-opacity:1;stroke:#505050;stroke-width:0.2;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="path903-9"
+       cx="111.85253"
+       cy="47.533211"
+       rx="1.6944462"
+       ry="1.5814831" />
+    <ellipse
+       style="fill:#dcdcdc;fill-opacity:1;stroke:#505050;stroke-width:0.2;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="path903-5-1"
+       cx="130.74559"
+       cy="83.511955"
+       rx="1.6944462"
+       ry="1.5814831" />
+    <ellipse
+       style="fill:#dcdcdc;fill-opacity:1;stroke:#505050;stroke-width:0.2;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       id="path903-4-7"
+       cx="111.85253"
+       cy="120.50736"
+       rx="1.6944462"
+       ry="1.5814831" />
+    <path
+       style="fill:#000000"
+       d="m 67.48627,46.403576 v -4.292597 l 39.76301,-40.8926364 4.29259,-0.90370502 1.80741,1.58148402 -0.67778,2.93704 -39.53707,39.3111534 -2.25927,0.451853 v 2.033336 z"
+       id="path987" />
+  </g>
+  <metadata
+     id="metadata1440">
+    <rdf:RDF>
+      <cc:Work
+         rdf:about="">
+        <dc:title />
+        <dc:format>image/svg+xml</dc:format>
+        <dc:type
+           rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+      </cc:Work>
+    </rdf:RDF>
+  </metadata>
+		</svg>
+
+		<svg
+   xmlns:dc="http://purl.org/dc/elements/1.1/"
+   xmlns:cc="http://creativecommons.org/ns#"
+   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+   xmlns:svg="http://www.w3.org/2000/svg"
+   xmlns="http://www.w3.org/2000/svg"
+   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+   width="54mm"
+   height="65mm"
+   viewBox="0 0 54 65"
+   version="1.1"
+   id="band"
+   class="band"
+   inkscape:version="1.0.2 (e86c8708, 2021-01-15)"
+   sodipodi:docname="band.svg">
+  <defs
+     id="defs839" />
+  <sodipodi:namedview
+     pagecolor="#ffffff"
+     bordercolor="#666666"
+     borderopacity="1"
+     objecttolerance="10"
+     gridtolerance="10"
+     guidetolerance="10"
+     inkscape:pageopacity="0"
+     inkscape:pageshadow="2"
+     inkscape:window-width="1354"
+     inkscape:window-height="976"
+     id="namedview837"
+     showgrid="false"
+     inkscape:zoom="0.74208053"
+     inkscape:cx="396.85039"
+     inkscape:cy="406.29014"
+     inkscape:window-x="0"
+     inkscape:window-y="23"
+     inkscape:window-maximized="0"
+     inkscape:current-layer="svg8" />
+  <ellipse
+     style="fill:#660000;stroke:none"
+     cx="-1.5398383"
+     cy="36.798351"
+     rx="15.368926"
+     ry="14.790689"
+     transform="matrix(0.84391193,-0.53648174,0.45787278,0.88901773,0,0)"
+     id="ellipse833" />
+  <path
+     id="path1426-0"
+     style="fill:#650000"
+     d="M 31.13418,63.626512 A 20.189808,31.638904 2.8687161 0 0 52.86786,33.037002 20.189808,31.638904 2.8687161 0 0 34.28663,0.42728858 20.189808,31.638904 2.8687161 0 0 27.72281,1.7784175 20.189808,31.638904 2.8687161 0 1 38.88197,31.719926 a 20.189808,31.638904 2.8687161 0 1 -15.1848,29.237126 20.189808,31.638904 2.8687161 0 0 7.42256,2.66874 20.189808,31.638904 2.8687161 0 0 0.0145,7.2e-4 z M 27.72284,1.7784175 A 20.189808,31.638904 0 0 0 7.5473301,33.417314 20.189808,31.638904 0 0 0 27.73731,65.056212 20.189808,31.638904 0 0 0 34.22529,63.378272 20.189808,31.638904 0 0 1 21.58161,34.032779 20.189808,31.638904 0 0 1 35.28413,4.0723335 a 20.189808,31.638904 0 0 0 -7.54682,-2.293916 20.189808,31.638904 0 0 0 -0.0145,0 z" />
+  <metadata
+     id="metadata1442">
+    <rdf:RDF>
+      <cc:Work
+         rdf:about="">
+        <dc:title></dc:title>
+      </cc:Work>
+    </rdf:RDF>
+  </metadata>
+		</svg>
 
 		<h3> Node Configurations </h3>
 		<p> Nodes can be configured to serve different purposes based on the game play requirements. These include:</p>
@@ -95,53 +318,54 @@
 		<h4> Control Point </h4>
 		
 		<p> The control point function is the core function of the Node. We really set out to remove the confusion
-                    and disputes that all to often are a result of control point style games in airsoft. This function allows 
-                    areas of the airsoft field to be directly mapped to the node. If your team doesn't own the Node for that 
-                    territory then your team doesn't own that territory.
+        and disputes that often occur as in control point style games. This function allows also
+        areas of the airsoft field to be directly mapped to the node. If your team doesn't own the Node for that 
+        territory then your team doesn't own that territory.
 		</p>
 		
 		<p> The Node displays the assigned color of the team of that owns it with its 5 RGB LEDs. Additionally, you can 
-                    checkout the field map and see the color of the territory for the Node in question to determine the owner.
+        checkout the field map and see the color of the territory for the Node in question to determine the owner.
 		</p>
 		
 		<h4> Capturing a Control Point </h4>
 		
 		<p> Here is a scenario on how to capture a Control Point. Lets say you are assigned to RED team, you and your
-                    squad come up on a Node. It is displaying 5 BLUE RGBs (it is owned by BLUE team). In order to take it over
-                    swipe your RFID tag over the designated area. You will hear short "beep" and then one of 2 things will happen
-                    based on the setting for the control points for the game:
+        squad come up on a Node. It is displaying 5 BLUE RGBs (it is owned by BLUE team). In order to take it over
+        swipe your RFID tag over the designated area. You will hear short "beep" and then one of 2 things will happen
+        based on the setting for the control points for the game:
 		</p>
 		
 		<ul>
-			<li> Scenario One: If the control points have been configured for immediate capture the lights will all 
+			<li> <b>Scenario One</b>: If the control points have been configured for immediate capture the lights will all 
 			     immediately go RED indicating your team now owns the Node and associated territory. </li>
-			<li> Scenario Two: Control Points have been configured for a delayed capture. In this scenario all RGBs will
-                             start to blink in the color of the original owning team. As time towards the delayed capture counts down the
-                             RGBs will start to turn RED showing your process toward completing the capture. Each RGB indicate 1/5
-                             the total capture time so dig in your mission isn't accomplished until all RGBs are the color of your
-                             team.</li>
+			<br>
+			<li> <b>Scenario Two</b>: Control Points have been configured for a delayed capture. In this scenario all RGBs will
+           start to blink in the color of the original owning team. As time towards the delayed capture counts down the
+           RGBs will start to turn RED showing your process toward completing the capture. Each RGB indicate 1/5
+           the total capture time so dig in your mission isn't accomplished until all RGBs are the color of your
+           team.</li>
 		</ul>
 		
 		<p> For scenario 2, the entire time the RGBs are blinking the Node is considered unstable. If BLUE team is
-                    able to eliminate your squad they are able to recapture the Node before RED team is awarded the capture.
-                    However, they must now hold the Control Point for the amount of time RED had it in their control. For example,
-                    capture time is set for 60 seconds. RED begins the capture and holds it for 36 seconds (The Node will be displaying
-                    3 RED RGBs and 2 BLUE RGBs, 36/60 = 3/5). BLUE eliminates all RED players and scans one of their RFID tags, BLUE
-                    will now how to hold that control point for 36 seconds before it becomes stable and fully in BLUE teams possession.
+        able to eliminate your squad they are able to recapture the Node before RED team is awarded the capture.
+        However, they must now hold the Control Point for the amount of time RED had it in their control. For example,
+        capture time is set for 60 seconds. RED begins the capture and holds it for 36 seconds (The Node will be displaying
+        3 RED RGBs and 2 BLUE RGBs, 36/60 = 3/5). BLUE eliminates all RED players and scans one of their RFID tags, BLUE
+        will now how to hold that control point for 36 seconds before it becomes stable and fully in BLUE teams possession.
 		</p>
 
 		<p> To reward players for working as a team we have included a capture assist function. Based on the value of this setting
-                    it allows multiple members of the same time to contribute toward the capture of a control point. Once capture of a control
-                    point has started each subsequent team member that swipes their RFID tag on the unstable node will reduce the total capture
-                    by a fraction of the total capture time.
+        it allows multiple members of the same time to contribute toward the capture of a control point. Once capture of a control
+        point has started each subsequent team member that swipes their RFID tag on the unstable node will reduce the total capture
+        by a fraction of the total capture time.
 		</p>
 
 		<p> Example: Capture time  = 60 seconds, Capture Assist = 50%. First player initiates capture, timer starts. 10 seconds into the
-                    capture another player from the same team swipes their RFID tag on the unstable node. Capture time has now been reduced by 30
-                    seconds resulting in a total time remaining of 20 seconds (60 - 10 - 30 = 20)
+        capture another player from the same team swipes their RFID tag on the unstable node. Capture time has now been reduced by 30
+        seconds resulting in a total time remaining of 20 seconds (60 - 10 - 30 = 20)
 		</p> 
 
-                <p> This same behavior also works for a team that is trying to recapture a control point </p>
+    <p> This same behavior also works for a team that is trying to recapture a control point </p>
 
 		<h4> Respawn Stations </h4>
 		<p> Respawn Stations are really just an extension of the control point configuration. Based on game requirements
@@ -199,10 +423,6 @@
                     if "dead."
 		</p>
 
-
-		<h2> The Controller </h2>
-		<p> 
-		</p>
 	</div>
 	
 	<script src="static/js/script.js">	
