adding styling to about.css to override style rules for path from main.css

--- a/static/css/about.css
+++ b/static/css/about.css
@@ -22,3 +22,13 @@
 .band {
   display: inline-block;
 }
+
+path {
+  opacity: 1;
+}
+
+path:hover {
+  opacity: 1;
+  fill: inherit;
+  transform: scale(1);
+}
