attempt to detect and handle IE and Edge

--- a/templates/about.html
+++ b/templates/about.html
@@ -304,8 +304,8 @@
   </metadata>
 		</svg>
 
-		<h3> node Configurations </h3>
-		<p> nodes can be configured to serve different purposes based on the game play requirements. These include:</p>
+		<h3> Node Configurations </h3>
+		<p> Nodes can be configured to serve different purposes based on the game play requirements. These include:</p>
 		<ul>
 			<li> Control Points </li>
 			<li> Respawn Stations </li>
@@ -376,7 +376,7 @@
 
 		<p> Here is how the respawn mechanic works. After being elminated, you would return to the nearest control point that
             also serves as a respawn station. You will then hold your RFID tag over the node until all RGBs flash red.
-            By doing that you have just deactivated your RFID tag from interacting with any other non respawn station nodes and
+            By doing that you have just deactivated your RFID tag from interacting with any other non-respawn station nodes and
             the Controller is currently tracking you as "dead". <b> THIS IS IMPORTANT PLEASE KEEP READING! </b> In order to get
             your tag reactivated you need to wait for the cool down timer timer to elapse. You can check the status of this timer
             by holding your RFID tag over the node to see how many red lights appear. Again each red RGB indicates 1/5
