do not allow UID responses from UIDs not registered to the field in play

--- a/templates/about.html
+++ b/templates/about.html
@@ -313,7 +313,7 @@
 			<li> Respawn Stations </li>
 			<li> Bombs / IEDs </li>
 			<li> Team Registration </li>
-			<li> Team Query </li>
+			<li> Player Query </li>
 			<li> UID Registration </li>
 		</ul>
 
@@ -352,8 +352,8 @@
         able to eliminate your squad, they are able to recapture the node before RED team is awarded the capture.
         However, they must  hold the Control Point for the amount of time RED had it in their control. For example,
         capture time is set for 60 seconds. RED begins the capture and holds it for 36 seconds (The node will display
-        3 RED RGBs and 2 BLUE RGBs, 36/60 = 3/5). BLUE eliminates all RED players and scans one of their RFID tags, BLUE
-        will now how to hold that control point for 36 seconds before it becomes stable and fully in BLUE teams possession.
+        3 RED RGBs and 2 BLUE RGBs, 36/60 &#8776; 3/5). BLUE eliminates all RED players and scans one of their RFID tags, BLUE
+        will need to hold control for 36 seconds before it becomes stable and fully in BLUE possession.
 		</p>
 
 		<p> To reward players for working as a team we have included a capture assist function. Based on the value of this setting
