--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
         <li><a href="/pair_uid">Pair UID</a></li>
         <li><a href="/node_admin">Node Admin</a></li>
         <li><a href="/comms">Comms Log</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="https://skirmesh.net/player-information">About</a></li>
 
     </ul>
 
