Add location tooltip on hover

--- a/templates/field_wrapper.html
+++ b/templates/field_wrapper.html
@@ -5,6 +5,9 @@
 <script src="../static/js/field_update.js"></script>
 <link rel="stylesheet" type="text/css" href="../static/css/field_wrapper.css" charset="utf-8" />
 
+<div id="tooltip" display="none" style="position: absolute; display: none;"></div>
+
+
 <div class="grid_container">
 
 <div class="grid_element roster">
@@ -76,6 +79,6 @@
 
 </div>
 
-<script type=text/javascript src="{{ url_for('static', filename='js/script.js') }}"></script>
+<script src="../static/js/field_wrapper.js"></script>
 
 {% endblock %}
