--- a/static/css/field_wrapper.css
+++ b/static/css/field_wrapper.css
@@ -51,3 +51,12 @@ div.roster {
     display: flex;
     flex-direction: column;
 }
+
+
+#tooltip {
+    color: var(--BLACK);
+    background: #FFFFFF80;
+    border-radius: 0.2em;
+    padding: 0.1em;
+    z-index: 10;
+}
