--- a/static/css/leaderboard.css
+++ b/static/css/leaderboard.css
@@ -27,10 +27,10 @@ svg.score:hover {
 }
 
 #tooltip {
-    color: var(--WHITE);
-    background: var(--button_color);
+    color: var(--BLACK);
+    background: #FFFFFF80;
     border-radius: 0.2em;
-    padding: 1em;
+    padding: 0.1em;
     z-index: 10;
 }
 
